# 202400111_EDD_Proyecto

./: Avion.h  CMakeLists.txt  CargadorAviones.h  CargadorCambios.h  CargadorPasajeros.h  ColaPasajeros.h  Fila.h  Graphviz.h  ListaCircular.h  ListaCircularAviones.h  ListaCircularDoble.h  ListaDoble.h  ListaDoblePasajeros.h  ListaSimple.h  Nodo.h  NodoDoble.h  NodoSimple.h  Pasajero.h  Pila.h  PilaEquipaje.h  Utilidades.h  main.cpp
Archivos de prueba/Archivos de prueba/: pasajeros.json
src/: Cambios.txt  CambiosTest1.txt  arbol_pilotos.dot  avionesTest1.json  avionesTest2.json  aviones_disponibles.dot  aviones_mantenimiento.dot  cola_pasajeros.dot  grafo_rutas.dot  lista_pasajeros.dot  main.cpp  matriz_dispersa.dot  movimientosTest2.txt  pasajerosTest1.json  pila_equipaje.dot  pilotos.json  rutas.txt  tabla_hash_pilotos.dot
src/cargadores/: CargadorAviones.h  CargadorCambios.h  CargadorPasajeros.h  CargadorPilotos.h  CargadorRutas.h
src/estructuras/: ColaPasajeros.h  ListaCircularAviones.h  ListaDoblePasajeros.h  PilaEquipaje.h
src/estructuras_no_lineales/: ArbolBAviones.h  ArbolPilotos.h  GrafoRutas.h  ListaSimplePilotos.h  MatrizDispersa.h  NodoArbolPiloto.h  NodoCiudad.h  NodoEncabezado.h  NodoMatriz.h  NodoRuta.h  TablaHashPilotos.h
src/modelos/: Avion.h  Equipaje.h  Piloto.h
src/pruebas2/: pasajerosTest2.json
