cmake_minimum_required(VERSION 4.0)
project(202400111_EDD_Practica)

set(CMAKE_CXX_STANDARD 20)

add_executable(202400111_EDD_Practica main.cpp
        ListaSimple.h
        Nodo.h
        ListaDoble.h
        ListaCircular.h
        Fila.h
        Pila.h
        ListaCircularDoble.h
        NodoDoble.h
        avion.h
        Pasajero.h
        NodoSimple.h)
